--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.7",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
