--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "sass": "^1.89.2"
   },
   "devDependencies": {
